# echocardiography

./: .gitignore  README.md  pyproject.toml  requirements.txt
cython/: main.py  setup.py
data_feature/: dataset_extremal.csv  dataset_metrics.csv
docs/source/: README.rst  conf.py  index.rst  part_1.rst  part_2.rst
src/: algorithm.ipynb  benchmark.ipynb  calc_relevant_features.ipynb  librosa_example.ipynb  training.ipynb
