[tool.poetry]
name = "echocardiography"
version = "0.1.0"
description = ""
authors = ["turilin <turilin@primatlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
librosa = "^0.10.0"
matplotlib = "^3.7.0"
tqdm = "^4.64.1"
pandas = "^1.5.3"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
